# ProjektMenedzerKursow

./: CMakeLists.txt  README.md  adminwindow.cpp  adminwindow.h  adminwindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  studentwindow.cpp  studentwindow.h  studentwindow.ui
BusinessLogic/: CMakeLists.txt  admin.cpp  admin.h  course.cpp  course.h  coursemanager.cpp  coursemanager.h  exceptions.cpp  student.cpp  student.h  user.cpp  user.h
